Tue Jan 12 16:10:09 CET 2016
	Fixed declaraion of MHD_get_reason_phrase_for(). -EG

Mon Jan 11 19:58:50 CET 2016
	Configure.ac small fixes and refactoring. -EG

Fri Dec 18 15:54:50 CET 2015
	Releasing libmicrohttpd 0.9.48. -CG

Tue Dec  15 18:35:55 CET 2015
	Improved compatibility with VS2010 and other older
	compilers. -EG

Tue Dec  8 21:48:44 CET 2015
	Default backlog size for listen socket was changed from
	32 to SOMAXCONN, added new option MHD_OPTION_LISTEN_BACKLOG_SIZE
	to override default backlog size.
	If not all connections can be handled by MHD_select() than
	at least some of connections will be processed instead of
	failing without any processing.
	Fixed redefenition of FD_SETSIZE on W32 so select() will
	work with 2000 connections instead of 64.
	Better handled redefenition of FD_SETSIZE on all
	platforms. -EG

Sat Dec  5 17:30:45 CET 2015
	Close sockets more aggressively in multi-threaded
	mode (possibly relevant for idle servers). -CG

Fri Dec  4 13:53:05 CET 2015
	Releasing libmicrohttpd 0.9.47. -CG

Thu Dec  3 18:21:44 CET 2015
	Reworked VS project files. Used x64 build tools by
	default, many optimizations, fixes.
	Added project files for VS 2015. -EG

Tue Dec  1 14:05:13 CET 2015
	SPDY is dead, killing experimental libmicrospdy. -CG

Tue Dec  1 10:01:12 CET 2015
	New logic for controlling socket buffer modes.
	Eliminated delay before last packet in response and before
	"100 Continue" response on all platforms. Also response
	header are pushed to client without waiting for response
	body. -EG

Wed Nov 25 17:02:53 CET 2015
	Remove 200ms delay observable with keep-alive on Darwin
	and *BSD platfroms. -EG

Tue Nov 10 15:25:48 CET 2015
	Fix issue with shutdown if connection was resumed just
	before shutdown. -FC

Fri Nov  6 22:54:38 CET 2015
	Fixing the buffer shrinkage issue, this time with test. -CG
	Releasing libmicrohttpd 0.9.46. -CG

Tue Nov  3 23:24:52 CET 2015
	Undoing change from Sun Oct 25 15:29:23 CET 2015